fixed css spacing and modify land apge

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-/*!
- * Start Bootstrap - Grayscale v3.3.7+1 (http://startbootstrap.com/template-overviews/grayscale)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
+/*
+///////////////////////////////////////////////////////////////////////////////
+Global
+///////////////////////////////////////////////////////////////////////////////
+*/
 body {
   width: 100%;
   height: 100%;
@@ -10,10 +10,12 @@ body {
   color: white;
   background-color: black;
 }
+
 html {
   width: 100%;
   height: 100%;
 }
+
 h1,
 h2,
 h3,
@@ -26,11 +28,13 @@ h6 {
   font-weight: 700;
   letter-spacing: 1px;
 }
+
 p {
   margin: 0 0 25px;
   font-size: 18px;
   line-height: 1.5;
 }
+
 @media (min-width: 768px) {
   p {
     margin: 0 0 35px;
@@ -38,20 +42,29 @@ p {
     line-height: 1.6;
   }
 }
+
 a {
   color: #42DCA3;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
+
 a:hover,
 a:focus {
   text-decoration: none;
   color: #1d9b6c;
 }
+
 .light {
   font-weight: 400;
 }
+
+/*
+///////////////////////////////////////////////////////////////////////////////
+Navigation
+///////////////////////////////////////////////////////////////////////////////
+*/
 .navbar-custom {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
@@ -59,48 +72,59 @@ a:focus {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: black;
 }
+
 .navbar-custom .navbar-toggle {
   color: white;
   background-color: rgba(255, 255, 255, 0.2);
   font-size: 12px;
 }
+
 .navbar-custom .navbar-toggle:focus,
 .navbar-custom .navbar-toggle:active {
   outline: none;
 }
+
 .navbar-custom .navbar-brand {
   font-weight: 700;
 }
+
 .navbar-custom .navbar-brand:focus {
   outline: none;
 }
+
 .navbar-custom a {
   color: white;
 }
+
 .navbar-custom .nav li a {
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
 }
+
 .navbar-custom .nav li a:hover {
   color: rgba(255, 255, 255, 0.8);
   outline: none;
   background-color: transparent;
 }
+
 .navbar-custom .nav li a:focus,
 .navbar-custom .nav li a:active {
   outline: none;
   background-color: transparent;
 }
+
 .navbar-custom .nav li.active {
   outline: none;
 }
+
 .navbar-custom .nav li.active a {
   background-color: rgba(255, 255, 255, 0.3);
 }
 .navbar-custom .nav li.active a:hover {
   color: white;
 }
+
 @media (min-width: 768px) {
   .navbar-custom {
     padding: 20px 0;
@@ -117,6 +141,12 @@ a:focus {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
 }
+
+/*
+///////////////////////////////////////////////////////////////////////////
+Intro Header
+///////////////////////////////////////////////////////////////////////////
+*/
 .intro {
   display: table;
   width: 100%;
@@ -131,16 +161,19 @@ a:focus {
   background-size: cover;
   -o-background-size: cover;
 }
+
 .intro .intro-body {
   display: table-cell;
   vertical-align: middle;
 }
+
 .intro .intro-body .brand-heading {
   font-size: 40px;
 }
 .intro .intro-body .intro-text {
   font-size: 18px;
 }
+
 @media (min-width: 768px) {
   .intro {
     height: 100%;
@@ -153,6 +186,7 @@ a:focus {
     font-size: 26px;
   }
 }
+
 .btn-circle {
   width: 70px;
   height: 70px;
@@ -167,18 +201,21 @@ a:focus {
   -moz-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
 }
+
 .btn-circle:hover,
 .btn-circle:focus {
   outline: none;
   color: white;
   background: rgba(255, 255, 255, 0.1);
 }
+
 .btn-circle i.animated {
   -webkit-transition-property: -webkit-transform;
   -webkit-transition-duration: 1s;
   -moz-transition-property: -moz-transform;
   -moz-transition-duration: 1s;
 }
+
 .btn-circle:hover i.animated {
   -webkit-animation-name: pulse;
   -moz-animation-name: pulse;
@@ -189,6 +226,7 @@ a:focus {
   -webkit-animation-timing-function: linear;
   -moz-animation-timing-function: linear;
 }
+
 @-webkit-keyframes pulse {
   0% {
     -webkit-transform: scale(1);
@@ -203,6 +241,7 @@ a:focus {
     transform: scale(1);
   }
 }
+
 @-moz-keyframes pulse {
   0% {
     -moz-transform: scale(1);
@@ -217,9 +256,11 @@ a:focus {
     transform: scale(1);
   }
 }
+
 .content-section {
   padding-top: 100px;
 }
+
 .download-section {
   width: 100%;
   padding: 50px 0;
@@ -231,23 +272,7 @@ a:focus {
   background-size: cover;
   -o-background-size: cover;
 }
-#map {
-  width: 100%;
-  height: 200px;
-  margin-top: 100px;
-}
-@media (min-width: 767px) {
-  .content-section {
-    padding-top: 250px;
-  }
-  .download-section {
-    padding: 100px 0;
-  }
-  #map {
-    height: 400px;
-    margin-top: 250px;
-  }
-}
+
 .btn {
   text-transform: uppercase;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -257,11 +282,13 @@ a:focus {
   transition: all 0.3s ease-in-out;
   border-radius: 0;
 }
+
 .btn-default {
   border: 1px solid #42DCA3;
   color: #42DCA3;
   background-color: transparent;
 }
+
 .btn-default:hover,
 .btn-default:focus {
   border: 1px solid #42DCA3;
@@ -269,43 +296,58 @@ a:focus {
   color: black;
   background-color: #42DCA3;
 }
+
 ul.banner-social-buttons {
   margin-top: 0;
 }
+
 @media (max-width: 1199px) {
   ul.banner-social-buttons {
     margin-top: 15px;
   }
 }
+
 @media (max-width: 767px) {
   ul.banner-social-buttons li {
     display: block;
     margin-bottom: 20px;
     padding: 0;
   }
+
   ul.banner-social-buttons li:last-child {
     margin-bottom: 0;
   }
 }
+
+/*
+///////////////////////////////////////////////////////////////////////////
+Footer Section
+///////////////////////////////////////////////////////////////////////////
+*/
 footer {
   padding: 50px 0;
 }
+
 footer p {
   margin: 0;
 }
+
 ::-moz-selection {
   text-shadow: none;
   background: #fcfcfc;
   background: rgba(255, 255, 255, 0.2);
 }
+
 ::selection {
   text-shadow: none;
   background: #fcfcfc;
   background: rgba(255, 255, 255, 0.2);
 }
+
 img::selection {
   background: transparent;
 }
+
 img::-moz-selection {
   background: transparent;
 }
